[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/nothing_pushed.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/play_pushed.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/quit_pushed.jpg" type="Texture" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nothing_Pressed" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play_Pressed" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Quit_Pressed" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Play" type="TextureButton" parent="."]
margin_left = 513.0
margin_top = 190.0
margin_right = 669.0
margin_bottom = 269.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
margin_left = 760.0
margin_top = 191.0
margin_right = 916.0
margin_bottom = 271.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play_Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Quit_Timer" type="Timer" parent="."]
wait_time = 0.4
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Play_Timer" to="." method="_on_Play_Timer_timeout"]
[connection signal="timeout" from="Quit_Timer" to="." method="_on_Quit_Timer_timeout"]
